# myapplication

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/pesaran/myapplication/: ExampleInstrumentedTest.kt
app/src/androidTest/java/org/pesaran/sleeve/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/pesaran/myapplication/: ADCNode.kt  Block.kt  ICM20948Node.kt  IntanRHDNode.kt  MainActivity.kt  Node.kt  Signal.kt  SignalDecoder.kt  SignalPlot.kt  Storage.kt  TimeSeriesNode.kt  UploadWorker.kt  Util.kt  WaveNode.kt
app/src/main/java/org/pesaran/myapplication/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/pesaran/sleeve/: ADCNode.kt  BandPassNode.kt  Block.kt  ClockNode.kt  ICM20948Node.kt  IntanRHDNode.kt  MainActivity.kt  Node.kt  RectifierNode.kt  Signal.kt  SignalDecoder.kt  SignalPlot.kt  Storage.kt  SurveyWorker.kt  TimeSeriesNode.kt  UploadWorker.kt  Util.kt  WaveNode.kt
app/src/main/java/org/pesaran/sleeve/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/proto/org/pesaran/thalamus/: thalamus.proto
app/src/main/res/raw/: sleeve_d50fb63dd19340d2b20aaebeeaf168d4.cer
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: provider_paths.xml
app/src/test/java/org/pesaran/myapplication/: ExampleUnitTest.kt
app/src/test/java/org/pesaran/sleeve/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
zoom-scrape/: CMakeLists.txt  Dockerfile  app.py  requirements.txt  scrape.py  server.py
zoom-scrape/cmake/: ffmpeg.cmake
zoom-scrape/src/: main.cpp
